--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,18 @@
       <label for="value" class="mr-3">VZ</label>
       <input type="text" class="form-control" id="value" v-model="form.vz">
     </div>
+    <div class="form-group mr-5">
+      <label for="value" class="mr-3">Начальное время</label>
+      <input type="text" class="form-control" id="value" v-model="form.tstart">
+    </div>
+    <div class="form-group mr-5">
+      <label for="value" class="mr-3">Шаг моделирования</label>
+      <input type="text" class="form-control" id="value" v-model="form.dt">
+    </div>
+    <div class="form-group mr-5">
+      <label for="value" class="mr-3">Конечное время</label>
+      <input type="text" class="form-control" id="value" v-model="form.tend">
+    </div>
     <button class="btn btn-primary" type="submit">Создать</button>
   </form>
 </div>
